# Atlas

./: README.md
atlas-backend/: .env.example  .gitignore  .mcp.json  .vercelignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
atlas-backend/app/: api.py
atlas-backend/app/agent/: agent.py  attachments.py  cancellation.py
atlas-backend/app/history/: store.py
atlas-backend/app/llm/: embedding.py  gemini.py
atlas-backend/app/observability/: langfuse.py  logfire.py
atlas-backend/app/prompts/: force_answer_prompt.txt  plan_prompt.txt  react_prompt.txt
atlas-backend/app/rag/: __init__.py  bm25.py  chunking.py  graph.py  loaders.py  pipeline.py  rerank.py  store.py
atlas-backend/app/routes/: books.py  chat.py  documents.py
atlas-backend/app/schema/: agent.py  chat.py  documents.py  llm_settings.py
atlas-backend/app/tools/: tools.py
atlas-backend/data/overviews/: README.md  annualreport-2025.txt  jio-ipo.txt
atlas-backend/eval/: questions_for_llm.md
atlas-backend/migrations/: 0001_add_bm25_tokens.sql
atlas-backend/scripts/: backfill_bm25_tokens.py  persist_test.py
atlas-backend/tests/: conftest.py  test_agent.py  test_bm25.py  test_rerank.py  test_tools.py
atlas-frontend/: .env.example  CLAUDE.md  README.md  package.json
atlas-frontend/app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx
atlas-frontend/components/: api-key-modal.tsx  book-picker.tsx  chat-history.tsx  chat-input.tsx  empty-state.tsx  message-bubble.tsx  rag-panel.tsx  settings-modal.tsx  thinking-steps.tsx  token-usage.tsx  top-bar.tsx
(+22 files in other folders)
